alignment fix

--- a/themeParks.css
+++ b/themeParks.css
@@ -45,7 +45,7 @@ h {
   text-align: center;
   font-size: 50px;
   color: yellow;
-  padding: 20px;
+  padding: 50px;
   font-style: italic;
 }
 
